<resources>
    <string name="app_name">Second Hand Car Seller</string>
    <string name="Car">Car</string>
    <string name="Agent">Agent</string>
    <string name="Profile">Profile</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forget Password?</string>
    <string name="login">Login</string>


    <string name="Appointment">Appointment</string>
    <string name="Adjust">Adjust</string>
    <string name="Name">Name :</string>
    <string name="Report">Report a problem</string>
    <string name="EditProfile">Edit My Profile</string>
    <string name="logout">Log Out</string>
    <string name="carName">Car Name:</string>
    <string name="price">Price (RM): </string>
    <string name="year">Manufacture Year:</string>
    <string name="mileage">Mileage (KM):</string>
    <string name="addcar">Add Car</string>
    <string name="next">Next</string>


    <string-array name="color">
        <item>Red</item>
        <item>Yellow</item>
        <item>White</item>
        <item>Black</item>
        <item>Silver</item>
        <item>Blue</item>
        <item>Brown</item>
        <item>Green</item>
        <item>Purple</item>
        <item>Other</item>
    </string-array>

    <string-array name="reject">
        <item>"Blacklisted dealer's new account"</item>
        <item>Company does not exist</item>
        <item>Blacklisted by bank</item>
        <item>Location given not correct</item>
        <item>Same company existing</item>
    </string-array>

    <string name="color_prompt">Choose a color</string>


    <string name="brand_prompt">Select Brand</string>
    <string name="type_prompt">Choose a car type</string>
    <string name="addAgent">Add Agent</string>
    <string name="sold">Mark As Sold?</string>
    <string name="car_name">Car Name:   </string>
    <string name="date">Date: </string>
    <string name="time">Time: </string>
    <string-array name="car_type">
        <item>Sedan</item>
        <item>MPV</item>
        <item>Hatchback</item>
        <item>SUV</item>
        <item>4X4</item>
        <item>Sport</item>
        <item>Van</item>
        <item>Coupe</item>
    </string-array>
    <string name="get_appointment_url">https://dewy-minuses.000webhostapp.com/GetAllAgentAppointment.php</string>
    <string name="get_appointment_detail_url">https://dewy-minuses.000webhostapp.com/getAgentBookingDetail.php</string>
    <string name="customer">Customer:   </string>
    <string name="contact_no">Contact Number:  </string>
    <string name="cust_email">Customer Email:   </string>
    <string name="app_date">Appointment Date:   </string>
    <string name="app_time">Appointment Time:   </string>
    <string name="accept_request">Accept</string>
    <string name="title_booking_detail">Booking Detail</string>
    <string name="update_Status_url">https://dewy-minuses.000webhostapp.com/updateAppointmentStatus.php</string>
    <string name="met_update_status_url">https://dewy-minuses.000webhostapp.com/metUpdateAppointmentStatus.php</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="title_edit_car">Car Maintenance</string>
    <string name="title_booking">My Booking</string>
    <string name="title_my_profile">My Profile</string>


    <string name="title_car_management">Car Management</string>
    <string name="color_indicator">Green - Met, Red - Booked, Pen - Pending, Cross - Cancelled</string>
    <string name="promotion">Make Promotion</string>
    <string name="ic">IC No:</string>
    <string name="email_dot">Email:</string>
    <string name="company">Company:</string>
    <string name="start_date">Start Date:</string>
    <string name="scancode">Scan</string>
    <string name="reset">Reset</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="caption_reset_password">Enter your email address and we will send you an email to reset your password</string>
    <string name="title_reset_pw">Password Recovery</string>
    <string name="get_allEmail_url">https://dewy-minuses.000webhostapp.com/getAllEmail.php</string>
    <string name="name">Name :</string>
    <string name="agent_name">Agent Name</string>
    <string name="ic_no">IC No :</string>
    <string name="agent_ic_number">Agent IC Number</string>
    <string name="Email">Email :</string>
    <string name="agent_email_address">Agent Email Address</string>
    <string name="agent_contact_number">Agent Contact Number</string>
    <string name="select_a_date">Select A Date</string>
    <string name="start_working_at">Start Date :</string>
    <string name="create_password">Create Password :</string>
    <string name="tips4Pending">- Pending</string>

    <string name="tips3Cancelled">- Cancelled</string>
    <string name="tips2Booked">- Booked</string>
    <string name="tips1Met">- Met</string>
    <string name="prices">Price:</string>
    <string name="promotion_history">Promotion History</string>

</resources>
