<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.alex.secondhandcarseller.AddAgentActivity">


    <TableLayout
        android:id="@+id/tableLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="10"
                android:gravity="center"
                android:text="@string/name"
                android:textColor="@color/Black"
                android:textSize="18sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_weight="80">

                <EditText
                    android:id="@+id/etAgentName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/agent_name"
                    android:textSize="15sp" />

            </android.support.design.widget.TextInputLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvIc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="10"
                android:gravity="center"
                android:text="@string/ic_no"
                android:textColor="@color/Black"
                android:textSize="18sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_weight="80">

                <EditText
                    android:id="@+id/etAgentIC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/agent_ic_number"
                    android:inputType="phone"
                    android:textSize="15sp" />

            </android.support.design.widget.TextInputLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="10"
                android:gravity="center"
                android:text="@string/Email"
                android:textColor="@color/Black"
                android:textSize="18sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_weight="80">

                <EditText
                    android:id="@+id/etAgentEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/agent_email_address"
                    android:inputType="textEmailAddress"
                    android:textSize="15sp" />

            </android.support.design.widget.TextInputLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="10"
                android:gravity="center"
                android:text="@string/contact_no"
                android:textColor="@color/Black"
                android:textSize="17sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_weight="80">

                <EditText
                    android:id="@+id/etAgentContact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/agent_contact_number"
                    android:inputType="phone"
                    android:textSize="15sp" />

            </android.support.design.widget.TextInputLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvWork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="10"
                android:gravity="center"
                android:text="@string/start_working_at"
                android:textColor="@color/Black"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="80"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:paddingLeft="2dp"
                android:text="@string/select_a_date"
                android:id="@+id/tvChooseDate"
                android:textSize="18sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvPw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="10"
                android:gravity="center"
                android:text="@string/create_password"
                android:textColor="@color/Black"
                android:textSize="16sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_weight="80">

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textSize="15sp" />

            </android.support.design.widget.TextInputLayout>

        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/buttonAddAgent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/addAgent"/>

    <ProgressBar
        android:id="@+id/progressBarInsertA"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
